--- a/master/website/board/templates/board/b_bizunit.html
+++ b/master/website/board/templates/board/b_bizunit.html
@@ -119,104 +119,129 @@
         var xhr;
 
         function insert_element() {
-//변수 리스트
-            var bizunitcd = document.getElementById("bizunit_cd").value;
-            var bizunitnm = document.getElementById("bizunit_nm").value;
-            var bizunitrmrk = document.getElementById("bizunit_rmrk").value;
+            var bizunitCd = document.getElementById("bizunit_cd").value;
+            var bizunitNm = document.getElementById("bizunit_nm").value;
+            var bizunitRmrk = document.getElementById("bizunit_rmrk").value;
 
-//예외 처리
             // 사업부 코드 항목
-            if(bizunitcd == '') {
+            if (bizunitCd == '') {
                 alert('사업부 코드가 비었습니다.');
                 document.getElementById("bizunit_cd").focus();
                 return false;
             }
             // 사업부명 항목
-            if(bizunitnm == '') {
+            if (bizunitNm == '') {
                 alert('사업부명이 비었습니다.');
                 document.getElementById("bizunit_nm").focus();
                 return false;
             }
             // 비고 항목
-            if(bizunitrmrk == '') {
+            if (bizunitRmrk == '') {
                 alert('사업부 비고가 비었습니다.');
                 document.getElementById("bizunit_rmrk").focus();
                 return false;
             }
 
-//예외 처리 끝
-
-            var strurl = "bizunit_element_insert?bizunitcd=" + bizunitcd + "&bizunitnm=" + bizunitnm+ "&bizunitrmrk=" + bizunitrmrk;
-            //alert(strurl);
-            //return false;
+            var payload = {
+                "bizunit_cd": bizunitCd,
+                "bizunit_nm": bizunitNm,
+                "bizunit_rmrk": bizunitRmrk
+            };
 
             xhr = new XMLHttpRequest();
-            xhr.onreadystatechange = function() {
+            xhr.onreadystatechange = function () {
                 if (xhr.readyState == 4) {
-                    var data = xhr.responseText;
+                    if (xhr.status == 201)
+                        alert("생성이 완료되었습니다.");
+                    location.reload();
+                } else {
+                    if (xhr.status == 400) {
+                        var data = xhr.responseText;
+                        var obj = JSON.parse(data);
 
-                    var obj = JSON.parse(data);
-                    alert(obj.result_msg);
-
-                    if(obj.flag =='0') {
-                        location.reload();
+                        if (obj.detail == "DuplicateCode") {
+                            alert("법인코드가 이미 존재합니다.");
+                        } else {
+                            alert("400 Bad Request");
+                        }
                     }
                 }
             };
-            xhr.open("POST", strurl);
+
+            var strurl = "http://127.0.0.1:8080/rest_api/bizunits";
+            xhr.open("POST", strurl, true);
             xhr.setRequestHeader("X-CSRFToken", csrftoken);
-            xhr.send(null);
+            xhr.setRequestHeader("Content-Type", "application/json");
+            xhr.send(JSON.stringify(payload));
         }
 
         function update_element(elem) {
-            var value = elem.getAttribute('value');
-            var bizunitrmrk = $('#bizunitrmrk' + value).val();
-            var biznunitnm = $('#bizunitnm'+ value).val();
-            var strurl = "bizunit_element_update?value=" + value + "&bizunitrmrk="+bizunitrmrk + "&bizunitnm="+biznunitnm;
+            var id = elem.getAttribute('name');
+
+            var bizunitCd = $('#bizunitcd' + id).text();
+            var bizunitNm = $('#bizunitnm' + id).val();
+            var bizunitRmrk = $('#bizunitrmrk' + id).val();
+
+            var payload = {
+                "bizunit_cd": bizunitCd,
+                "bizunit_nm": bizunitNm,
+                "bizunit_rmrk": bizunitRmrk
+            };
 
             xhr = new XMLHttpRequest();
-            xhr.onreadystatechange = function() {
+            xhr.onreadystatechange = function () {
                 if (xhr.readyState == 4) {
-                    var data = xhr.responseText;
+                    if (xhr.status == 200)
+                        alert("수정이 완료되었습니다.");
+                    location.reload();
+                } else {
+                    if (xhr.status == 400) {
+                        var data = xhr.responseText;
+                        var obj = JSON.parse(data);
 
-                    var obj = JSON.parse(data);
-                    alert(obj.result_msg);
-
-                    if(obj.flag =='0') {
-                        location.reload();
+                        if (obj.detail == "") {//추후 에러처리 추가시 사용
+                            alert("에러코드");
+                        } else {
+                            alert("400 Bad Request");
+                        }
                     }
                 }
             };
-            xhr.open("POST", strurl);
+
+            var strurl = "http://127.0.0.1:8080/rest_api/bizunits/" + id;
+            xhr.open("PUT", strurl, true);
             xhr.setRequestHeader("X-CSRFToken", csrftoken);
-            xhr.send(null);
+            xhr.setRequestHeader("Content-Type", "application/json");
+            xhr.send(JSON.stringify(payload));
         }
 
         function delete_element(elem) {
-
-            var id = elem.getAttribute('id');
-
-            var strurl = "bizunit_element_delete?id=" + id;
-            // alert(strurl);
-            // return false;
+            var id = elem.getAttribute('name');
 
             xhr = new XMLHttpRequest();
-            xhr.onreadystatechange = function() {
+            xhr.onreadystatechange = function () {
                 if (xhr.readyState == 4) {
-                    var data = xhr.responseText;
+                    if (xhr.status == 204)
+                        alert("삭제가 완료되었습니다.");
+                    location.reload();
+                } else {
+                    if (xhr.status == 400) {
+                        var data = xhr.responseText;
+                        var obj = JSON.parse(data);
 
-                    var obj = JSON.parse(data);
-                    alert(obj.result_msg);
-                        location.reload();
-
-                    if(obj.flag =='1') {
-                        document.getElementById('typebox_' + id).remove();
+                        if (obj.detail == "") {//추후 에러처리 추가시 사용
+                            alert("에러코드");
+                        } else {
+                            alert("400 Bad Request");
+                        }
                     }
                 }
             };
 
-            xhr.open("POST", strurl);
+            var strurl = "http://127.0.0.1:8080/rest_api/bizunits/" + id;
+            xhr.open("DELETE", strurl, true);
             xhr.setRequestHeader("X-CSRFToken", csrftoken);
+            xhr.setRequestHeader("Content-Type", "application/json");
             xhr.send(null);
         }
     </script>
