--- a/master/website/board/templates/board/cb_cost_center.html
+++ b/master/website/board/templates/board/cb_cost_center.html
@@ -314,7 +314,7 @@
                         "bizunit_id": bizunitId,
                         "factory_id": factoryId,
                         "cstctr_type": cstctrType,
-                        "cstctrdirdiv": cstctrDirDiv
+                        "cstctr_dir_div": cstctrDirDiv
                     };
 
                     xhr = new XMLHttpRequest();
