--- a/master/website/board/templates/board/codemanage.html
+++ b/master/website/board/templates/board/codemanage.html
@@ -72,7 +72,7 @@
     }
 
     function updateType(elem) {
-        var typeId = elem.getAttribute('typeid');
+        var typeId = elem.getAttribute('name');
 
         var typeCd = document.getElementById('type_cd' + typeId).innerText;
         var value = elem.value;
@@ -171,6 +171,8 @@
             "cd_nm": codeNm
         };
 
+        alert(JSON.stringify(payload));
+
         xhr = new XMLHttpRequest();
         xhr.onreadystatechange = function () {
             if (xhr.readyState == 4) {
@@ -199,7 +201,7 @@
     }
 
     function updateCode(elem) {
-        var codeId = elem.getAttribute("name");
+        var codeId = elem.getAttribute('name');
 
         var typeCd = document.getElementById('mytype_cd' + codeId).innerText;
         var codeCd = document.getElementById('code_cd' + codeId).innerText;
@@ -245,7 +247,7 @@
     }
 
     function deleteCode(elem) {
-        var codeId = elem.getAttribute("name");
+        var codeId = elem.getAttribute('name');
 
         if (!confirm("삭제 하시겠습니까")) {
             return false;
@@ -345,7 +347,7 @@
                                         <a href="?type_cd={{ i.type_cd }}">{{ i.type_cd }}</a>
                                     </td>
                                     <td width="15%">
-                                        <input type="text" typeid="{{ i.id }}" class="form-control" value="{{ i.type_nm }}" onchange="updateType(this)" />
+                                        <input type="text" name="{{ i.id }}" class="form-control" value="{{ i.type_nm }}" onchange="updateType(this)" />
                                     </td>
                                     <td width="10%">
                                         {{ i.insrt_id }}
@@ -376,7 +378,7 @@
 
         <div>
             <div>
-                TYPE : <span style="color:#FF6600;">{{ type_cd }}</span>
+                TYPE : <span id={{type_cd}} style="color:#FF6600;">{{ type_cd }}</span>
             </div>
             <br>
 
