--- a/master/website/templates/sidebar.html
+++ b/master/website/templates/sidebar.html
@@ -58,7 +58,7 @@
                     <span class="menu-arrow arrow_carrot-right"></span>
                 </a>
                 <ul class="sub">
-                    <li><a class=""  >원가 예측</a></li>
+                    <li><a class=""  href="{% url 'board:cc_costbill1_if' %}">원가 예측</a></li>
                 </ul>
             </li>
             <li class="active">
