--- a/master/website/templates/sidebar.html
+++ b/master/website/templates/sidebar.html
@@ -59,6 +59,7 @@
                 </a>
                 <ul class="sub">
                     <li><a class=""  href="{% url 'board:cc_costbill1_if' %}">원가 예측</a></li>
+                    <li><a class=""  href="{% url 'board:chart_if' %}">원가 차트</a></li>
                 </ul>
             </li>
             <li class="active">
