--- a/master/website/templates/sidebar.html
+++ b/master/website/templates/sidebar.html
@@ -33,7 +33,7 @@
                 </a>
                 <ul class="sub">
                     <li><a class="" href="{% url 'board:cb_cost_center_list' %}">Cost Center</a></li>
-                    <li><a class=""  >원가요소계정</a></li>
+                    <li><a class="" href="{% url 'board:b_costeleaccnt' %}">원가요소계정</a></li>
                 </ul>
             </li>
             <li class="sub-menu">
