--- a/master/website/board/templates/board/b_item.html
+++ b/master/website/board/templates/board/b_item.html
@@ -238,7 +238,7 @@
                 <section class="panel">
                     <div class="table-responsive">
 
-                        {% if rsItem %}
+
                         <table class="table">
                             <thead>
                             <tr>
@@ -256,116 +256,122 @@
                             </tr>
                             </thead>
                             <tbody>
-                                <tr bgcolor="#F7F7F7">
-                                    <td width="8%"></td>
-                                    <td width="12%">
-                                        <select class="factory">
-                                            {% for ii in rsFactory %}
-                                            <option value="{{ ii.id }}"> {{ ii.factory_nm }} </option>
-                                            {% endfor %}
-                                        </select>
-                                    </td>
-                                    <td width="8%"> <input type="text" id="item_cd" class="form-control" placeholder="itemcd"></td>
-                                    <td width="12%"> <input type="text" id="item_nm" class="form-control" placeholder="itemname"></td>
-                                    <td width="12%"> <input type="text" id="item_spec" class="form-control" placeholder="spec"></td>
-                                    <td width="12%">
-                                        <select class="unit">
-                                            {% for ii in rsUnit %}
-                                            <option value="{{ ii.id }}"> {{ ii.cd_nm }} </option>
-                                            {% endfor %}
-                                        </select>
-                                    </td>
-                                    <td width="8%"></td>
-                                    <td width="12%">
-                                        <select class="itemgrp">
-                                            {% for ii in rsItemgrp %}
-                                            <option value="{{ii.id}}"> {{ ii.itemgrp_nm }} </option>
-                                            {% endfor %}
-                                        </select>
-                                    </td>
-                                    <td width="12%">
-                                        <select class="itemaccnt">
-                                            {% for ii in rsItemaccnt %}
-                                            <option value="{{ii.id}}"> {{ ii.itemaccnt_nm }} </option>
-                                            {% endfor %}
-                                        </select>
-                                    </td>
-                                    <td width="8%">
-                                        <button onclick="insertItem();" class="btn btn-default btn-sm">저장</button>
-                                    </td>
-                                    <td></td>
-                                </tr>
-
-                                {% for i in rsItem %}
-                                <tr>
-                                    <td width="8%">
-                                        {{ i.factory_cd }}
-                                    </td>
-                                    <td width="12%">
-                                        <select class="factory{{i.id}}">
-                                            {% for ii in rsFactory %}
-                                            {% if i.factory_id == ii.id %}
-                                            <option selected value="{{ ii.id }}"> {{ ii.factory_nm }} </option>
-                                            {% else %}
-                                            <option value="{{ii.id}}"> {{ ii.factory_nm }} </option>
-                                            {% endif %}
-                                            {% endfor %}
-                                        </select>
-                                    </td>
-                                    <td id="code{{ i.id }}" width="8%">{{ i.item_cd }}</td>
-                                    <td width="12%">
-                                        <input type="text" class="form-control" id="name{{ i.id }}" value="{{ i.item_nm }}"/>
-                                    </td>
-                                    <td width="12%">
-                                        <input type="text" class="form-control" id="spec{{ i.id }}" value="{{ i.item_spec }}"/>
-                                    </td>
-                                    <td width="12%">
-                                        <select class="unit{{i.id}}">
-                                            {% for ii in rsUnit %}
-                                            {% if i.unit_id == ii.id %}
-                                            <option selected value="{{ ii.id }}"> {{ ii.cd_nm }} </option>
-                                            {% else %}
-                                            <option value="{{ ii.id }}"> {{ ii.cd_nm }} </option>
-                                            {% endif %}
-                                            {% endfor %}
-                                        </select>
-                                    </td>
-                                    <td width="8%">{{ i.itemgrp_cd }}</td>
-                                    <td width="12%">
-                                        <select class="itemgrp{{i.id}}">
-                                            {% for ii in rsItemgrp %}
-                                            {% if i.itemgrp_id == ii.id %}
-                                            <option selected value="{{ ii.id }}"> {{ ii.itemgrp_nm }} </option>
-                                            {% else %}
-                                            <option value="{{ ii.id }}"> {{ ii.itemgrp_nm }} </option>
-                                            {% endif %}
-                                            {% endfor %}
-                                        </select>
-                                    </td>
-                                    <td width="12%">
-                                        <select class="itemaccnt{{i.id}}">
-                                            {% for ii in rsItemaccnt %}
-                                            {% if i.itemaccnt_id == ii.id %}
-                                            <option selected value="{{ ii.id }}"> {{ ii.itemaccnt_nm }} </option>
-                                            {% else %}
-                                            <option value="{{ ii.id }}"> {{ ii.itemaccnt_nm }} </option>
-                                            {% endif %}
-                                            {% endfor %}
-                                        </select>
-                                    </td>
-                                    <td width="8%">
-                                        <button class="btn btn-default btn-sm" id="update_{{i.id}}" name="{{i.id}}" onclick="updateItem(this);">수정</button>
-                                    </td>
-                                    <td width="8%">
-                                        <button class="btn btn-default btn-sm" id="delete_{{i.id}}" name="{{i.id}}" onclick="deleteItem(this);">삭제</button>
-                                    </td>
-                                </tr>
-                                {% endfor %}
+                            <tr bgcolor="#F7F7F7">
+                                <td width="8%"></td>
+                                <td width="12%">
+                                    <select class="factory">
+                                        {% for ii in rsFactory %}
+                                        <option value="{{ ii.id }}"> {{ ii.factory_nm }} </option>
+                                        {% endfor %}
+                                    </select>
+                                </td>
+                                <td width="8%"> <input type="text" id="item_cd" class="form-control" placeholder="itemcd"></td>
+                                <td width="12%"> <input type="text" id="item_nm" class="form-control" placeholder="itemname"></td>
+                                <td width="12%"> <input type="text" id="item_spec" class="form-control" placeholder="spec"></td>
+                                <td width="12%">
+                                    <select class="unit">
+                                        {% for ii in rsUnit %}
+                                        <option value="{{ ii.id }}"> {{ ii.cd_nm }} </option>
+                                        {% endfor %}
+                                    </select>
+                                </td>
+                                <td width="8%"></td>
+                                <td width="12%">
+                                    <select class="itemgrp">
+                                        {% for ii in rsItemgrp %}
+                                        <option value="{{ii.id}}"> {{ ii.itemgrp_nm }} </option>
+                                        {% endfor %}
+                                    </select>
+                                </td>
+                                <td width="12%">
+                                    <select class="itemaccnt">
+                                        {% for ii in rsItemaccnt %}
+                                        <option value="{{ii.id}}"> {{ ii.itemaccnt_nm }} </option>
+                                        {% endfor %}
+                                    </select>
+                                </td>
+                                <td width="8%">
+                                    <button onclick="insertItem();" class="btn btn-default btn-sm">저장</button>
+                                </td>
+                                <td></td>
+                            </tr>
                             </tbody>
+                            {% if rsItem %}
+                            <tbody>
+                            {% for i in rsItem %}
+                            <tr>
+                                <td width="8%">
+                                    {{ i.factory_cd }}
+                                </td>
+                                <td width="12%">
+                                    <select class="factory{{i.id}}">
+                                        {% for ii in rsFactory %}
+                                        {% if i.factory_id == ii.id %}
+                                        <option selected value="{{ ii.id }}"> {{ ii.factory_nm }} </option>
+                                        {% else %}
+                                        <option value="{{ii.id}}"> {{ ii.factory_nm }} </option>
+                                        {% endif %}
+                                        {% endfor %}
+                                    </select>
+                                </td>
+                                <td id="code{{ i.id }}" width="8%">{{ i.item_cd }}</td>
+                                <td width="12%">
+                                    <input type="text" class="form-control" id="name{{ i.id }}" value="{{ i.item_nm }}"/>
+                                </td>
+                                <td width="12%">
+                                    <input type="text" class="form-control" id="spec{{ i.id }}" value="{{ i.item_spec }}"/>
+                                </td>
+                                <td width="12%">
+                                    <select class="unit{{i.id}}">
+                                        {% for ii in rsUnit %}
+                                        {% if i.unit_id == ii.id %}
+                                        <option selected value="{{ ii.id }}"> {{ ii.cd_nm }} </option>
+                                        {% else %}
+                                        <option value="{{ ii.id }}"> {{ ii.cd_nm }} </option>
+                                        {% endif %}
+                                        {% endfor %}
+                                    </select>
+                                </td>
+                                <td width="8%">{{ i.itemgrp_cd }}</td>
+                                <td width="12%">
+                                    <select class="itemgrp{{i.id}}">
+                                        {% for ii in rsItemgrp %}
+                                        {% if i.itemgrp_id == ii.id %}
+                                        <option selected value="{{ ii.id }}"> {{ ii.itemgrp_nm }} </option>
+                                        {% else %}
+                                        <option value="{{ ii.id }}"> {{ ii.itemgrp_nm }} </option>
+                                        {% endif %}
+                                        {% endfor %}
+                                    </select>
+                                </td>
+                                <td width="12%">
+                                    <select class="itemaccnt{{i.id}}">
+                                        {% for ii in rsItemaccnt %}
+                                        {% if i.itemaccnt_id == ii.id %}
+                                        <option selected value="{{ ii.id }}"> {{ ii.itemaccnt_nm }} </option>
+                                        {% else %}
+                                        <option value="{{ ii.id }}"> {{ ii.itemaccnt_nm }} </option>
+                                        {% endif %}
+                                        {% endfor %}
+                                    </select>
+                                </td>
+                                <td width="8%">
+                                    <button class="btn btn-default btn-sm" id="update_{{i.id}}" name="{{i.id}}" onclick="updateItem(this);">수정</button>
+                                </td>
+                                <td width="8%">
+                                    <button class="btn btn-default btn-sm" id="delete_{{i.id}}" name="{{i.id}}" onclick="deleteItem(this);">삭제</button>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                            </tbody>
+                            {% else %}
+                            <tbody>
+                                <tr>
+                                    <span>Item이 없습니다.</span>
+                                </tr>
+                            </tbody>
+                            {% endif %}
                         </table>
-                        {% else %}
-                        <span>Item이 없습니다.</span>
-                        {% endif %}
                     </div>
                 </section>
             </div>
@@ -378,44 +384,44 @@
                     <div class="table-responsive">
                         <table class="table">
                             <thead>
-                                <tr>
-                                    <th>
-                                        공장코드
-                                    </th>
-                                    <th>
-                                        단위코드
-                                    </th>
-                                    <th>
-                                        품목그룹
-                                    </th>
-                                    <th>
-                                        품목계정
-                                    </th>
-                                </tr>
+                            <tr>
+                                <th>
+                                    공장코드
+                                </th>
+                                <th>
+                                    단위코드
+                                </th>
+                                <th>
+                                    품목그룹
+                                </th>
+                                <th>
+                                    품목계정
+                                </th>
+                            </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td width="25%">
-                                        {% for i in rsFactory %}
-                                        <div>{{ i.id }}.{{ i.factory_cd }} - {{ i.factory_nm }}</div>
-                                        {% endfor %}
-                                    </td>
-                                    <td width="25%">
-                                        {% for i in rsUnit %}
-                                        <div>{{ i.id }}.{{ i.code_cd }} - {{ i.cd_nm }}</div>
-                                        {% endfor %}
-                                    </td>
-                                    <td width="25%">
-                                        {% for i in rsItemgrp %}
-                                        <div>{{ i.id }}.{{ i.itemgrp_cd }} - {{ i.itemgrp_nm }}</div>
-                                        {% endfor %}
-                                    </td>
-                                    <td width="25%">
-                                        {% for i in rsItemaccnt %}
-                                        <div>{{ i.id }}.{{ i.itemaccnt_cd }} - {{ i.itemaccnt_nm }}</div>
-                                        {% endfor %}
-                                    </td>
-                                </tr>
+                            <tr>
+                                <td width="25%">
+                                    {% for i in rsFactory %}
+                                    <div>{{ i.id }}.{{ i.factory_cd }} - {{ i.factory_nm }}</div>
+                                    {% endfor %}
+                                </td>
+                                <td width="25%">
+                                    {% for i in rsUnit %}
+                                    <div>{{ i.id }}.{{ i.code_cd }} - {{ i.cd_nm }}</div>
+                                    {% endfor %}
+                                </td>
+                                <td width="25%">
+                                    {% for i in rsItemgrp %}
+                                    <div>{{ i.id }}.{{ i.itemgrp_cd }} - {{ i.itemgrp_nm }}</div>
+                                    {% endfor %}
+                                </td>
+                                <td width="25%">
+                                    {% for i in rsItemaccnt %}
+                                    <div>{{ i.id }}.{{ i.itemaccnt_cd }} - {{ i.itemaccnt_nm }}</div>
+                                    {% endfor %}
+                                </td>
+                            </tr>
                             </tbody>
                         </table>
                     </div>
