--- a/master/website/board/templates/board/b_factory.html
+++ b/master/website/board/templates/board/b_factory.html
@@ -164,7 +164,7 @@
                             var obj = JSON.parse(data);
 
                             if (obj.detail == "DuplicateCode") {
-                                alert("법인코드가 이미 존재합니다.");
+                                alert("공장 코드가 이미 존재합니다.");
                             } else {
                                 alert("400 Bad Request");
                             }
