--- a/master/website/board/templates/board/cb_cost_center.html
+++ b/master/website/board/templates/board/cb_cost_center.html
@@ -273,8 +273,10 @@
                                 var data = xhr.responseText;
                                 var obj = JSON.parse(data);
 
-                                if (obj.detail == "DuplicateCode") {
-                                    alert("법인코드가 이미 존재합니다.");
+                                if (obj.detail == "Duplicate Code") {
+                                    alert("코스트센터 코드가 이미 존재합니다.");
+                                } else if (obj.detail == "Duplicate Name") {
+                                    alert("코스트센터명이 이미 존재합니다.");
                                 } else {
                                     alert("400 Bad Request");
                                 }
