--- a/master/website/board/templates/board/b_bizpartner.html
+++ b/master/website/board/templates/board/b_bizpartner.html
@@ -279,7 +279,7 @@
                             var obj = JSON.parse(data);
 
                             if (obj.detail == "DuplicateCode") {
-                                alert("법인코드가 이미 존재합니다.");
+                                alert("거래처 코드가 이미 존재합니다.");
                             }
                             else {
                                 alert("400 Bad Request");
