--- a/master/website/board/templates/board/b_bizunit.html
+++ b/master/website/board/templates/board/b_bizunit.html
@@ -160,7 +160,7 @@
                         var obj = JSON.parse(data);
 
                         if (obj.detail == "DuplicateCode") {
-                            alert("법인코드가 이미 존재합니다.");
+                            alert("사업부 코드가 이미 존재합니다.");
                         } else {
                             alert("400 Bad Request");
                         }
