--- a/master/website/board/templates/board/b_itemgrp.html
+++ b/master/website/board/templates/board/b_itemgrp.html
@@ -89,8 +89,8 @@
                     var data = xhr.responseText;
                     var obj = JSON.parse(data);
 
-                    if (obj.detail == "") {//추후 에러처리 추가시 사용
-                        alert("에러코드");
+                    if (obj.detail == "DuplicateCode") {
+                        alert("품목 그룹 코드가 이미 존재합니다.");
                     } else {
                         alert("400 Bad Request");
                     }
