Correcting Itemgrp Itemaccnt
Correcting Itemgrp Itemaccnt

--- a/master/website/board/templates/board/b_itemaccnt.html
+++ b/master/website/board/templates/board/b_itemaccnt.html
@@ -55,9 +55,9 @@
                         var data = xhr.responseText;
                         var obj = JSON.parse(data);
 
-                        if (obj.detail == "DuplicateCode") {
-                            alert("법인코드가 이미 존재합니다.");
-                        } else {
+                         if (obj.detail == "DuplicateCode") {
+                             alert("품목 계정 코드가 이미 존재합니다.");
+                         } else {
                             alert("400 Bad Request");
                         }
                     }
@@ -89,8 +89,8 @@
                          var data = xhr.responseText;
                          var obj = JSON.parse(data);
 
-                         if (obj.detail == "DuplicateCode") {
-                             alert("품목 계정 코드가 이미 존재합니다.");
+                         if (obj.detail == "") {//추후 에러처리 추가시 사용
+                             alert("에러코드");
                          } else {
                              alert("400 Bad Request");
                          }
