--- a/master/website/board/templates/board/b_itemgrp.html
+++ b/master/website/board/templates/board/b_itemgrp.html
@@ -56,7 +56,7 @@
                     var obj = JSON.parse(data);
 
                     if (obj.detail == "DuplicateCode") {
-                        alert("법인코드가 이미 존재합니다.");
+                        alert("품목 그룹 코드가 이미 존재합니다.");
                     } else {
                         alert("400 Bad Request");
                     }
@@ -89,8 +89,8 @@
                     var data = xhr.responseText;
                     var obj = JSON.parse(data);
 
-                    if (obj.detail == "DuplicateCode") {
-                        alert("품목 그룹 코드가 이미 존재합니다.");
+                    if (obj.detail == "") {
+                        alert("에러코드");
                     } else {
                         alert("400 Bad Request");
                     }
