add chart screen
2021.03.31

--- a/master/website/board/templates/board3/chart3.html
+++ b/master/website/board/templates/board3/chart3.html
@@ -26,7 +26,7 @@
             <div class="col-lg-12">
                 <section class="panel">
                     <header class="panel-heading">
-                        <h3>General Chart</h3>
+                        <h3>Chart 3</h3>
                     </header>
                     <div class="panel-body">
                         <div class="tab-pane" id="chartjs">
@@ -35,10 +35,10 @@
                                 <div class="col-lg-6">
                                     <section class="panel">
                                         <header class="panel-heading">
-                                            1. 변동비 ~ 매출액
+                                            1.
                                         </header>
                                         <div class="panel-body text-center">
-                                            <canvas id="line" height="300" width="450"></canvas>
+                                            <canvas height="300" width="450"></canvas>
                                         </div>
                                     </section>
                                 </div>
@@ -46,10 +46,10 @@
                                 <div class="col-lg-6">
                                     <section class="panel">
                                         <header class="panel-heading">
-                                            2. 변동비 + 고정비 ~ 매출액
+                                            2.
                                         </header>
                                         <div class="panel-body text-center">
-                                            <canvas id="bar" height="300" width="500"></canvas>
+                                            <canvas height="300" width="500"></canvas>
                                         </div>
                                     </section>
                                 </div>
@@ -63,7 +63,5 @@
     </section>
     <!--main content end-->
 </section>
-
-<script src="{%static 'js/chartjs-custom.js'%}"></script>
 
 {% endblock %}
