--- a/master/website/templates/sidebar.html
+++ b/master/website/templates/sidebar.html
@@ -60,6 +60,10 @@
                 <ul class="sub">
                     <li><a class=""  href="{% url 'board:cc_costbill1_if' %}">원가 예측</a></li>
                     <li><a class=""  href="{% url 'board:chart_if' %}">원가 차트</a></li>
+                    <li><a class=""  href="{% url 'board:chart1' %}">차트1</a></li>
+                    <li><a class=""  href="{% url 'board:chart2' %}">차트2</a></li>
+                    <li><a class=""  href="{% url 'board:chart3' %}">차트3</a></li>
+
                 </ul>
             </li>
             <li class="active">
